# WNBA-Fantasy-League

./: .cursorrules  .dockerignore  .editorconfig  .env.mvp  .env.production  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_SUMMARY.md  LICENSE  MVP_README.md  MVP_STORIES.md  Makefile  README.md  README_DEPLOYMENT.md  WNBA_API_ENDPOINTS.md  alembic.ini  conftest.py  debug_game_api.py  debug_player.py  debug_roster.py  demo_draft_auto_starters.py  docker-compose.mvp.yml  docker-compose.yml  env.example  nginx.conf  nginx.mvp.conf  prod.db.bak  prod.db.newerbak  pyproject.toml  standalone_comprehensive_ingest.py  start-mvp.sh  test_comprehensive_stats.py  test_standings_api.py  test_teams_api.py
.github/: CODE_OF_CONDUCT.md
alembic/: README  env.py  script.py.mako
app/: __init__.py  main.py
docs/: Architecture.md  DEPLOYMENT.md  MVP_TASK_SUMMARY.md  STORY_3_IMPLEMENTATION.md  Story-1.md  Story-10.md  Story-11.md  Story-12.md  Story-13.md  Story-14.md  Story-15.md  Story-17.md  Story-18.md  Story-19.md  Story-2.md  Story-20.md  Story-21.md  Story-22.md  Story-23.md  Story-24.md  Story-25.md  Story-3.md  Story-4.md  Story-5.md  Story-6.md  Story-7.md  Story-8.md  Story-9.md  Style-Guide.md  api_candidates.md  api_comparison.md  api_recommendation.md  dashboard.html  login.html  player-detail.html  rapidapi_integration.md  roster_management.html  story-10.md  story-11.md  story-12.md  (+9 more)
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: backup.sh  demo_analytics.py  deploy.sh  fetch_demo.py  manage.py  rapidapi_box_score_output.txt  rapidapi_list_teams_output.txt  rapidapi_schedule_output.txt  rapidapi_tests.ipynb  seed_demo.py  seed_mvp.py  seed_mvp_data.py  seed_mvp_real_data.py  setup-vps.sh  test_real_api.py  update_league_settings.py
tests/: test_admin_api.py  test_admin_ingest_log.py  test_admin_service.py  test_analytics.py  test_auth.py  test_bonus_calculator.py  test_data_quality.py  test_draft.py  test_draft_auto_starters.py  test_draft_clock.py  test_draft_integration.py  test_game_endpoints.py  test_health.py  test_ingest_service.py  test_league_endpoints.py  test_league_info_endpoints.py  test_league_management.py  test_lineup_service.py  test_live_game_jobs.py  test_live_games.py  test_logs_api.py  test_middleware.py  test_notification_api.py  (+11 more)
(+179 files in other folders)
