[tool.poetry]
name = "wnba-fantasy-league"
version = "0.1.0"
description = "A lightweight fantasy women's basketball web app for 2-4 friends"
authors = ["Grant Harris <me@grantharris.tech>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlmodel = "^0.0.8"
apscheduler = "^3.11.1"
balldontlie = "^0.2.2"
passlib = "^1.7.4"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^23.9.1", allow-prereleases = false}
ruff = "^0.0.279"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pre-commit = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "D"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"] 