[tool.poetry]
name = "wnba-fantasy-league"
version = "0.1.0"
description = "A lightweight fantasy women's basketball web app for a season-long fantasy competition"
authors = ["Grant Harris <me@grantharris.tech>"]

[[tool.poetry.packages]]
include = "app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = "^2.0.39"
apscheduler = "^3.11.0"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
requests = "^2.32.3"
alembic = "^1.15.2"
tenacity = "^9.1.2"
pytest-httpx = "^0.35.0"

[tool.poetry.dev-dependencies]
black = {version = "^23.9.1", allow-prereleases = false}
ruff = "^0.0.279"
isort = "^5.12.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
pre-commit = "^4.2.0"
httpx = "^0.28.1"
pytest-httpx = "^0.35.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "D"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]